--- a/project 2/proj2 notebook.ipynb
+++ b/project 2/proj2 notebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3668d83a9c691d25e6882b2f22e63a267a5087656806047cec49124665fa4b32"
+  "signature": "sha256:7ea7d21075e8c63247a839d60616fd71592670d63ba9401dc8d6450b9e214595"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,17 +12,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%pylab inline\n",
+      "%load_ext autoreload\n",
+      "%autoreload\n",
+      "\n",
+      "import logisticregression as lr\n",
       "import numpy as np\n",
       "import helper_functions as fn\n",
       "import math_functions as mf\n",
-      "import logisticregression as lr\n",
       "import os\n",
-      "$pylab inline"
+      "\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -44,7 +57,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -64,7 +77,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -78,30 +91,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "$\n",
-      "\n",
       "logreg = lr.LogisticRegression(X_train, Y_train, X_test, Y_test)\n",
       "logreg.fit()\n",
-      "\n",
-      "print logreg.w\n",
       "predict = logreg.predict()\n",
-      "print logreg.incorrect"
+      "\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "AttributeError",
-       "evalue": "'module' object has no attribute 'LogisticRegression'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-15-f60ae9854e69>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlogreg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mpredict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'LogisticRegression'"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -120,6 +119,219 @@
       "\n",
       "print w"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "('Log-loss: ', 137739.24585744986, ' at i = ', 0)\n",
+        "('Log-loss: ', 591171.00582281, ' at i = ', 1)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', inf, ' at i = ', 2)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "math_functions.py:8: RuntimeWarning: overflow encountered in exp\n",
+        "  val += np.log(1.0 + np.exp(-Y[i]*np.dot(w,X[i])))\n",
+        "math_functions.py:23: RuntimeWarning: overflow encountered in exp\n",
+        "  val += -X[i]*Y[i]/(1.0 + np.exp(Y[i] * np.dot(w, X[i])))\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 3)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 4)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 5)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 6)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 7)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 8)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 9)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 10)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 11)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 12)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 13)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 14)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 15)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 16)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 17)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 18)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 19)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 20)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 21)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 22)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('Log-loss: ', nan, ' at i = ', 23)"
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print locals()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
