LaTeX section added

--- a/project 2/proj2 notebook.ipynb
+++ b/project 2/proj2 notebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7ea7d21075e8c63247a839d60616fd71592670d63ba9401dc8d6450b9e214595"
+  "signature": "sha256:409b9df261c2a5277d406a750ad79c8804032878a3805b6ee3877ea1c4daf374"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -101,6 +101,37 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "LaTeX Explanation"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%latex\n",
+      "$$\\Huge\\Sigma^{\\normal 2}$$"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "latex": [
+        "$$\\Huge\\Sigma^{\\normal 2}$$"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.Latex at 0xa727048>"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "heading",
